--- a/003.TrainingNode/package.json
+++ b/003.TrainingNode/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "socket.io": "^4.2.0"
+    "socket.io": "^4.2.0",
+    "socket.io-client": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
