--- a/004.API-Restfull/package.json
+++ b/004.API-Restfull/package.json
@@ -10,7 +10,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "sequelize": "^6.7.0"
+    "mongoose": "^6.0.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
