--- a/004.API-Restfull/.env
+++ b/004.API-Restfull/.env
@@ -1,2 +1,3 @@
 PORT = 3333
-connection = mongodb+srv://Admin:Admin23082002@cluster0.4vvo6.mongodb.net/ApiRestfull?retryWrites=true&w=majority
+connection = mongodb+srv://Admin:Admin23082002@cluster0.b89k6.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+SECRET = FDSJFSECRETX2390[/;30SECRET92P]SECRET
