--- a/004.API-Restfull/package.json
+++ b/004.API-Restfull/package.json
@@ -7,10 +7,13 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "all": "^0.0.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.10"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.10",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
