add and configure @hapi/joi userValidation

--- a/004.API-Restfull/.env
+++ b/004.API-Restfull/.env
@@ -1,3 +1,4 @@
 PORT = 3333
 connection = mongodb+srv://Admin:Admin23082002@cluster0.b89k6.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 SECRET = FDSJFSECRETX2390[/;30SECRET92P]SECRET
+EXPIRATION_TIME = 16
