--- a/004.API-Restfull/package.json
+++ b/004.API-Restfull/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "all": "^0.0.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
